# test-1

./: PVS-Studio.lic  README.md  azure-pipelines.yml  f.c  script.sh  upload-sarif.yml
.github/workflows/: analyze.yml
src/: CMakeLists.txt  f.c  main.c
